--- a/styles/main.css
+++ b/styles/main.css
@@ -5,3 +5,62 @@ body{
   font-size:16px;
   color:#444;
 }
+
+.menu{
+  top: 0%;
+  width: 100%;
+  height:12%;
+  background-color: grey;
+}
+
+.options{
+  color: white;
+  width: 100%;
+  height: 12%;
+  display: flex;
+  flex-direction: row;
+  margin-left: 50%;
+}
+
+.item{
+  padding-right: 3%;
+  margin-top: 2%;
+}
+
+
+
+.mainTitle{
+  text-align: center;
+  font-size: 4rem;
+}
+
+.description{
+  width: 70%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+
+.infoPresentation{
+  display: flex;
+  margin-top: 7%;
+  justify-content: center;
+  background-color: #b1b1b1;
+}
+
+.txtImage{
+
+}
+
+p.txtImage{
+  margin-top: 7%;
+  width: 70%;
+  height: 60%;
+  vertical-align: middle;
+  text-align: center;
+  color: white;
+}
+
+.firstImage{
+  width: 50%;
+}
