--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@ body{
   padding:0;
   font-family: "Roboto", "Arial", sans-serif;
   font-size:16px;
-  color:#444;
+  background-color: #ffecdd;
 }
 
 .menu{
@@ -11,7 +11,10 @@ body{
   width: 100%;
   height:12%;
   background-color: grey;
+  position: relative;
+
 }
+
 
 .options{
   color: white;
@@ -22,9 +25,17 @@ body{
   margin-left: 50%;
 }
 
+.logo{
+  position: absolute;
+  color: Black;
+  margin-left: 3%;
+  margin-top: 1.7%;
+  font-size: 2.5rem;
+}
+
 .item{
   padding-right: 3%;
-  margin-top: 2%;
+  margin-top: 2.5%;
 }
 
 
@@ -32,6 +43,7 @@ body{
 .mainTitle{
   text-align: center;
   font-size: 4rem;
+  margin-top: 8%;
 }
 
 .description{
