--- a/styles/main.css
+++ b/styles/main.css
@@ -1,49 +1,58 @@
 body{
   margin:0;
   padding:0;
-  font-family: "Roboto", "Arial", sans-serif;
   font-size:16px;
-  background-color: #ffecdd;
+  font-family: 'Alata', sans-serif;
+  background-color: #ffecdd50;
+  overflow-x: hidden;
 }
 
 .menu{
   top: 0%;
   width: 100%;
   height:12%;
-  background-color: grey;
-  position: relative;
-
+  background-color: #131313;
+  position: absolute;
 }
 
 
 .options{
-  color: white;
   width: 100%;
   height: 12%;
   display: flex;
   flex-direction: row;
-  margin-left: 50%;
+  margin-left: 47%;
 }
 
 .logo{
   position: absolute;
-  color: Black;
+  color: white;
   margin-left: 3%;
   margin-top: 1.7%;
   font-size: 2.5rem;
 }
 
 .item{
-  padding-right: 3%;
+  padding-right: 3.5%;
   margin-top: 2.5%;
+  color: #ffecdd;
 }
 
-
+.sub{
+  position: absolute;
+  margin-top: 7%;
+  margin-left: 9%;
+  text-align: center;
+  z-index: 2;
+  background-color: #131313;
+  color: #ffecdd;
+  padding: 1.5%;
+}
 
 .mainTitle{
   text-align: center;
   font-size: 4rem;
-  margin-top: 8%;
+  margin-top: 12%;
 }
 
 .description{
@@ -55,24 +64,33 @@ body{
 
 .infoPresentation{
   display: flex;
-  margin-top: 7%;
+  margin-top: 9%;
   justify-content: center;
-  background-color: #b1b1b1;
+  background-color: #ffecdd;
+  position: relative;
 }
 
-.txtImage{
-
-}
 
 p.txtImage{
-  margin-top: 7%;
+  margin-top: 9%;
   width: 70%;
   height: 60%;
   vertical-align: middle;
   text-align: center;
-  color: white;
 }
 
 .firstImage{
   width: 50%;
+}
+
+.blackP{
+  background-color: #131313;
+  color: #ffecdd;
+}
+
+.p2{
+  text-align: center;
+  margin: 0 auto;
+  width: 70%;
+  margin-top: 12%;
 }
