--- a/styles/main.css
+++ b/styles/main.css
@@ -59,13 +59,14 @@ body{
   width: 70%;
   text-align: center;
   margin: 0 auto;
+  font-size: 20px;
 }
 
 
 .infoPresentation{
   display: flex;
+  justify-content: space-between;
   margin-top: 9%;
-  justify-content: center;
   background-color: #ffecdd;
   position: relative;
 }
@@ -73,7 +74,8 @@ body{
 
 p.txtImage{
   margin-top: 9%;
-  width: 70%;
+  margin-left: 5%;
+  width: 37%;
   height: 60%;
   vertical-align: middle;
   text-align: center;
