--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,7 @@ body{
   display: flex;
   flex-direction: row;
   margin-left: 47%;
+
 }
 
 .logo{
@@ -33,9 +34,20 @@ body{
 }
 
 .item{
-  padding-right: 3.5%;
-  margin-top: 2.5%;
+  border-bottom-style: none;
+}
+
+.item:hover{
+  border-bottom-style: solid;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+}
+
+a.itemLink{
+  padding-right: 3.8%;
+  margin-top: 1.3%;
   color: #ffecdd;
+  text-decoration: none;
 }
 
 .sub{
@@ -74,7 +86,7 @@ body{
 
 p.txtImage{
   margin-top: 9%;
-  margin-left: 5%;
+  margin-left: 5.8%;
   width: 37%;
   height: 60%;
   vertical-align: middle;
