--- a/styles/main.css
+++ b/styles/main.css
@@ -43,8 +43,12 @@ body{
   transition-timing-function: ease-in-out;
 }
 
+h2.item{
+  font-size: 1.3rem;
+}
+
 a.itemLink{
-  padding-right: 3.8%;
+  padding-right: 6%;
   margin-top: 1.3%;
   color: #ffecdd;
   text-decoration: none;
@@ -73,7 +77,7 @@ a.itemLink{
   width: 70%;
   text-align: center;
   margin: 0 auto;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 
@@ -87,7 +91,7 @@ a.itemLink{
 
 
 p.txtImage{
-  margin-top: 9%;
+  margin-top: 10.5%;
   margin-left: 5.8%;
   width: 37%;
   height: 60%;
