--- a/styles/main.css
+++ b/styles/main.css
@@ -57,7 +57,7 @@ a.itemLink{
 .sub{
   position: absolute;
   margin-top: 6.5%;
-  margin-left: 9%;
+  margin-left: 4.6%;
   text-align: center;
   z-index: 2;
   background-color: #131313;
@@ -65,6 +65,11 @@ a.itemLink{
   padding: 1.5%;
   border-radius: 15px;
 
+}
+
+span{
+  color: red;
+  font-size: 1.9rem;
 }
 
 .mainTitle{
