--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+
 body{
   margin:0;
   padding:0;
@@ -100,7 +101,7 @@ p.txtImage{
 }
 
 .blackP{
-  background-color: #131313;
+  background-color: #de6b11;
   color: #ffecdd;
 }
 
@@ -109,4 +110,27 @@ p.txtImage{
   margin: 0 auto;
   width: 70%;
   margin-top: 12%;
+}
+
+a{
+  color: black;
+}
+
+.top_website{
+  text-align: center;
+}
+
+.links{
+    column-count: 2;
+}
+/*.left{
+  width: 50%;
+	height: 100%;
+	float: left;
+}
+
+.right{
+  width: 50%;
+	height: 100%;
+	float: left;
 }
