--- a/styles/main.css
+++ b/styles/main.css
@@ -101,8 +101,8 @@ p.txtImage{
 }
 
 .blackP{
-  background-color: #de6b11;
-  color: #ffecdd;
+  background-color: #ffecdd;
+  color: black;
 }
 
 .p2{
