details centrage liens

--- a/styles/main.css
+++ b/styles/main.css
@@ -112,6 +112,13 @@ p.txtImage{
 .blackP{
   background-color: #ffecdd;
   color: black;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.links{
+  margin-top: 5%;
 }
 
 .p2{
